# home-lab-status-app

./: Cargo.toml  readme.md
documentation/: project-goal.md  tech-stack.md
home-lab-status-app/: Cargo.toml
home-lab-status-app/home-lab-status-app/src-tauri/: Cargo.toml  tauri.conf.json
home-lab-status-app/home-lab-status-app/src-tauri/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: device_monitor.rs  index.html  main.rs
