[package]
name = "home-lab-status-app"
version = "0.1.0"
description = "A macOS menu bar application for monitoring network devices"
authors = ["Your Name"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = ["system-tray"] }
tokio = { version = "1.0", features = ["full"] }
ping-rs = "0.4"
objc = "0.2.7"
objc-foundation = "0.1.1"
objc_id = "0.1.1"

[features]
custom-protocol = ["tauri/custom-protocol"] 